# ghc25-green-software-lab

./: .gitignore  LICENSE  README.md  pyproject.toml  workshop.py
src/: __init__.py  cli.py  cluster_config.py  config.py  get_market_data.py  market_data_service.py  mock_service.py  models.py  monitoring.py  services.py
src/configuration_files/: deployment.yaml  schedule.yaml
src/configuration_files/.workshop_reference/: deployment_2.yaml  get_market_data_optimized.py
src/yaml_utils/: __init__.py  restore_files.py  schedule_utils.py  yaml_parser.py  yaml_validator.py
tests/: __init__.py  test_checkpoint_commands.py  test_cli_backup_restore.py  test_dashboard.py  test_exercise_backup_restore.py  test_models.py  test_monitoring.py  test_package.py  test_schedule_utils.py  test_services.py  test_workshop_progression.py
workshop_validation/: validate_checkpoint_1.py  validate_checkpoint_2.py  validate_checkpoint_3.py
