[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workshop-svc"
version = "0.1.0"
description = "A toy financial trading venue simulation tool for workshops"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["simulation", "workshop"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
workshop = "src.cli:main"

[project.urls]
Homepage = "https://github.com/bloomberg/ghc25-green-software-lab"
Documentation = "https://github.com/bloomberg/ghc25-green-software-lab#readme"
Repository = "https://github.com/bloomberg/ghc25-green-software-lab"
Issues = "https://github.com/bloomberg/ghc25-green-software-lab/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
